# video-event-notifier

./: .gitignore  README.md
modules/: README.md  config.yml.template
modules/communications/mqtt_broker/: .env  docker-compose.yml  mosquitto.conf
modules/communications/webpage/: test-mqtt.txt
modules/database-host/: CMakeLists.txt
modules/database-host/cmake/: FindYamlCpp.cmake
modules/database-host/src/: database.cpp  database.h  main.cpp  movieupdater.cpp  movieupdater.h  nowplaying.cpp  nowplaying.h
modules/helper/subtitles/: main.py  mqtthandler.py  requirements.txt  subtitles.py
modules/helper/subtitles/files/drinks/: digimon-v1.drink  spiderman-homecoming-v1.drink  spiderverse-v1.drink
modules/helper/subtitles/files/srt/: Digimon the Movie.srt  Spider-Man_ Homecoming.srt
modules/video/chromecast/: chromecast.py  main.py  mqtthandler.py  requirements.txt
modules/video/plex/: main.py  plex.py  requirements.txt
